# media_bot_v2

./: .gitignore  Makefile  README.md  ReadMe.md  main.py  makefile  pyproject.toml  requirements.txt  setup.py  update_imdb_lib.py
docker/: dockerfile  run_postgres_docker.sh  updater.sh
scr/: __init__.py
scr/app/: App.py  __init__.py  config.py
scr/app_enums/: __init__.py  enumsClasses.py
scr/clients/: __init__.py
scr/clients/protocols/: bot_protocol.py
scr/command_handler/: commandhandler_class.py
scr/crawler/: crawler_class.py
scr/crawler/Workers/: DownloadWorker.py  TorrentWorker.py  WorkerABC.py  __init__.py
scr/database/: __init__.py  db_functions.py
scr/database/alch_db/: __init__.py  model.py
scr/mediator/: __init__.py  abc_mediator_classes.py  mediator_class.py  mediator_client.py
scr/mediator/mediator_types/: __init__.py  mediator_message.py
scr/parser/: __init__.py  parser_class.py
src/: __init__.py
src/app/: App.py  __init__.py  app_config.py  config.py
src/app_enums/: enumsClasses.py
src/clients/protocols/: bot_protocol.py  (+1 more)
src/command_handler/: commandhandler_class.py  utils.py
src/crawler/: __init__.py  crawler_class.py
src/database/: __init__.py  db_functions.py
src/media_bot_v2/: __main__.py
src/mediator/: abc_mediator_classes.py  mediator_class.py  mediator_client.py
src/parser/: parser_class.py
tests/: __main__.py  main_tests.py  testclient.py  testcommandhandler.py  testcrawler.py  testdb.py  testmediator.py  testparser.py  utils.py
tests/test_db_data/: films.csv  serials.csv  users.csv
(+48 files in other folders)
